# BetterChess

./: .gitignore  Board.cpp  Board.h  BoardState.cpp  BoardState.h  Box.h  CMakeLists.txt  Game.cpp  Game.h  KingThreatenedInfo.h  Move.h  MoveStack.cpp  MoveStack.h  Piece.cpp  Piece.h  PieceLocations.cpp  PieceLocations.h  README.md  StoreMove.cpp  StoreMove.h  Window.cpp  Window.h  main.cpp
.github/workflows/: build.yml
cmake/: FindSDL2_image.cmake
